# N.E.K.O

./: pyproject.toml
.agent/rules/: neko-guide.md
.github/workflows/: build-desktop-linux.yml  build-desktop.yml  docker-cleanup.yml  docs.yml
app/: main_server.py  monitor.py
app/agent_server/: __init__.py  _shared.py  tracker.py
app/main_server/: __init__.py  _shared.py  web_app.py
benchmarks/: audio_memory_benchmark.py
brain/: computer_use.py  task_executor.py
config/: __init__.py  _runtime.py  api_providers.json  providers.py
config/prompts/: prompts_avatar_interaction.py  prompts_chara.py  prompts_game.py  prompts_game_route.py  prompts_proactive.py
docker/: Dockerfile.full
docs/: api_providers_fields.md  live2d_motion_plan.md  package.json  privacy.md
docs/.vitepress/: config.ts  indexing-policy.mjs
docs/contributing/: nuitka-packaging.md
docs/design/: avatar-floating-7day-complete-guide-dev.md  avatar-floating-day4-companion-guide-dev.md  avatar-floating-guide-feature-tree.md  avatar-floating-panel-functions.md  avatar-floating-pc-global-overlay-migration-plan.md  avatar-tool-interaction-design-and-maintenance.md  avatar-tool-prompt-guidelines.md  cat-idle-state-machine-action-scoring.md  cat-idle-state-machine-design.md  cat-idle-state-machine-v1-implementation.md  cat-idle-states-feature.md  compact-chat-mode-design.md  deep-topic-hooks.md  pngtuber-lightweight-avatar-plan.md  proactive-reason-code-guide.zh-CN.md  translation-subtitle-panel-design.md  tutorial-framework-refactoring.md  voice-design-architecture.md
docs/frontend/: index.md
docs/guide/: linux-desktop-runtime.md
docs/ja/: privacy.md
docs/public/: BingSiteAuth.xml
docs/scripts/: analytics-consent.test.mjs  submit-indexnow.mjs  submit-indexnow.test.mjs
docs/zh-CN/: privacy.md
launcher_core/: runtime.py
main_logic/: agent_event_bus.py  conversation_turns.py  core.py  cross_server.py  tts_client.py
main_logic/activity/: tracker.py
main_logic/core/: _shared.py  greeting.py  lifecycle.py
main_logic/topic/: delivery.py  pipeline.py  signals.py
main_logic/tts_client/: __init__.py
main_routers/: characters_router.py  config_router.py  cookies_login_router.py  galgame_router.py  game_router.py  icebreaker_router.py  music_router.py  pages_router.py  pngtuber_router.py  system_router.py  websocket_router.py  workshop_router.py
main_routers/characters_router/: __init__.py  voice_cloning.py  voice_design.py  voice_preview.py  voice_providers.py
main_routers/pngtuber_importers/: pngtube_remix.py
main_routers/system_router/: proactive_chat_flow.py  proactive_content.py  proactive_parsing.py  screenshot.py
memory/: facts.py  recent.py  reflection.py
memory/_reflection/: __init__.py  ontology.py  refine.py  schema.py  selection.py  transitions.py
memory/persona/: __init__.py  _shared.py  corrections.py  facts.py  manager.py  mentions.py  persistence.py  refinement.py  rendering.py
memory/reflection/: __init__.py  _shared.py  evidence_flow.py  manager.py  persistence.py  promotion.py  promotion_merge.py  refinement.py  surfacing.py  synthesis.py
scripts/: capture_day3_avatar_tools_capsule_frames.py  check_nuitka_dist.py  check_static_app_part_keys.cjs  diagnose_pc_capsule_spotlight.py  diagnose_pc_day1_capsule_wobble.py  monitor_pc_day1_intro_greeting_cursor.py  monitor_pc_day3_avatar_tools.py  prepare_nuitka_plugins.py  verify_rapidocr_pillow_backend.py
specs/: launcher.spec
static/: app-agent.js  app-buttons.js  app-crop.js  app-interpage.js  app-part-test-utils.cjs  app-proactive.js  app-react-chat-window.js  app-state.js  app-telemetry.js  app-ui.js  app-websocket.js  app.js  avatar-multiscreen-drag.test.cjs  avatar-popup-common.js  avatar-ui-buttons.js  avatar-ui-drag.test.cjs  avatar-ui-popup.js  common-ui-hud.js  debug-health.js  jukebox-standalone.js  live2d-interaction.js  live2d-model.js  live2d-ui-buttons.js  mmd-interaction.js  mmd-ui-buttons.js  pngtuber-core.js  subtitle.js  tutorial-script-normalizer.test.cjs  tutorial-settings-tour-flow.test.cjs  tutorial-timeline-engine.test.cjs  tutorial-visual-runtime.test.cjs  universal-tutorial-manager.js  voice-chat-composer-hidden-contract.test.cjs  vrm-interaction.js  vrm-ui-buttons.js  yui-guide-audio-files.test.cjs  yui-guide-avatar-standin.test.cjs  yui-guide-common.test.cjs  yui-guide-day1-round-structure.test.cjs  yui-guide-day4-lock-safe-area.test.cjs  (+1 more)
static/app/: app-activity-signal.js  app-audio-playback.js  app-auto-goodbye.js  app-cat-mind-debug.js  app-cat-mind.js  app-character.js  app-chat-export.js  app-proactive.js  app-screen.js  app-state.js  app-websocket.js
static/avatar/: avatar-performance-stage.js  avatar-portrait.js  avatar-ui-buttons.js  avatar-ui-drag.js  avatar-ui-popup.js
static/css/: api_key_settings.css  character_card_manager.css  character_personality_onboarding.css  dark-mode.css  index.css  subtitle.css  tutorial-styles.css  voice_clone.css  yui-guide.css
static/icebreaker/: new-user-icebreaker.js
static/js/: agent_ui_v2.js  api_key_settings.js  character_card_manager.js  character_personality_onboarding.js  cookies_login.js  index.js  live2d_parameter_editor.js  model_manager.js  voice_clone.js
static/live2d/: live2d-core.js  live2d-emotion.js  live2d-init.js  live2d-interaction.js  live2d-model.js  live2d-ui-buttons.js
static/locales/: en.json  es.json  (+6 more)
templates/: agenthud.html  api_key_settings.html  character_card_manager.html  chat.html  cookies_login.html  index.html  jukebox.html  memory_browser.html  model_manager.html  soccer_demo.html  subtitle.html  voice_clone.html
tests/: static_app_parts.py  test_activity_tracker_followup.py  test_agent_rewrite_regression.py  test_cco_capacity.py
utils/: api_config_loader.py  audio_processor.py  audio_silence_remover.py  config_manager.py  cookies_login.py  dashscope_region.py  file_utils.py  language_utils.py  llm_client.py  meme_moderation.py  pyautogui_diagnostics.py  steam_cloud_bundle.py  token_tracker.py  twitch_auth.py  voice_clone.py  voice_config.py  voice_design.py  voice_preview_text.py
(+474 files in other folders)
