[build-system]
requires = ["hatchling", "setuptools<70"]
build-backend = "hatchling.build"

[project]
name = "N.E.K.O"
dynamic = ["version"]
description = "N.E.K.O. Desktop"
readme = "README.MD"
requires-python = "==3.11.*"
dependencies = [
  "fastapi~=0.115.9",
  "websockets~=15.0.1",
  "soxr~=0.5.0",
  "numpy~=1.26.4",
  "websocket-client~=1.8.0",
  "jinja2",
  "dashscope==1.25.4",
  "python-multipart",
  "pillow",
  "regex",
  "pyautogui",
  "backoff",
  "toml",
  "openai",
  "google-genai>=1.56.0",
  "anthropic",
  "uvicorn",
  "pyobjc; sys_platform == 'darwin'",
  "pytesseract",
  "pywin32; sys_platform == 'win32'",
  "pywinauto; sys_platform == 'win32'",
  "pygetwindow; sys_platform == 'win32'",
  "pyrnnoise>=0.4.3",
  "aiotieba>=4.7.1",
  "beautifulsoup4>=4.12.0",
  "bilibili-api-python>=17.4.0",
  "googletrans>=4.0.2",
  "translatepy",
  "tomli>=2.3.0",
  "tomli-w>=1.2.0",
  # sts2_autoplay/strategy_parser.py parses YAML strategy frontmatter. Declared
  # explicitly rather than leaning on bilibili-api-python's transitive pull, so a
  # change upstream can't silently break strategy loading in the packaged build.
  "pyyaml>=6.0",
  # ⚠ 严禁再加 loguru / structlog / logbook。日志统一走 utils.logger_config。
  # lint 守门：scripts/check_no_loguru.py（CI: .github/workflows/analyze.yml）
  "pyzmq>=27.1.0",
  "ormsgpack>=1.4.0",
  "browser-use>=0.11.0",
  "cryptography>=45.0.6",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
  "sqlalchemy>=2.0.0",
  "qrcode>=8.2",
  "httpx[socks]>=0.28.1",
  "psutil>=7.0.0",
  "portalocker>=2.10.1",
  "pyncm-async==1.8.1",
  "tornado>=6.5.4",
  "jmespath>=1.1.0",
  "orjson>=3.11.8",
  "playwright>=1.58.0",
  # memory-evidence-rfc §3.6.6: tiktoken for persona/reflection render
  # token budgeting (o200k_base encoding). PR-1 pins the dep; PR-3 ships
  # utils/tokenize.py and wires render-time counting.
  "tiktoken>=0.7.0",
  "cachetools>=5.3",
  # Local memory embeddings (memory/embeddings.py): ONNX + tokenizer. CPU
  # SIMD detection reads numpy's __cpu_features__ (compiled-C probe) — we do
  # NOT use py-cpuinfo, whose low-level CPU probe runs a generated native
  # routine in a child process that Huorong's heuristic flags as a trojan.
  "onnxruntime",
  "tokenizers",
  # Cross-platform screen capture used by galgame_plugin and potentially other
  # plugins (mss is also a candidate for brain/computer_use). Tiny (<1MB).
  "mss",
  "dxcam ; sys_platform == 'win32'",
  # Linux X11 window enumeration / geometry for galgame_plugin
  # (cross-platform-capture-plan). Falls back to `wmctrl` subprocess
  # when this dependency is unavailable. Skipped on Windows/macOS
  # to keep dev installs lean.
  "python-xlib ; sys_platform == 'linux'",
  # NOTE: RapidOCR lives in [dependency-groups] galgame below so plain
  # `uv sync` keeps dev installs lean while packaged builds can still bundle
  # the OCR backend with `uv sync --group galgame`.
  "imagehash>=4.3.2",
]

[tool.hatch.version]
path = "config/application.py"
pattern = '''^APP_VERSION\s*=\s*["'](?P<version>[^"']+)["']'''

[project.scripts]
neko-plugin = "plugin.neko_plugin_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
  "app",
  "launcher_core",
  "brain",
  "config",
  "main_logic",
  "main_routers",
  "memory",
  "plugin",
  "steamworks",
  "utils",
]
exclude = [
  "plugin/plugins",
]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "launcher_core",
  "brain",
  "config",
  "main_logic",
  "main_routers",
  "memory",
  "plugin",
  "steamworks",
  "utils",
  "static",
  "templates",
  "assets",
  "launcher.py",
  "README.MD",
  "LICENSE",
]
exclude = [
  "plugin/plugins",
]

# pyncm-async 已从 PyPI 下架（连同上游 pyncm 与 GitHub 仓库），改为本地 wheel 安装。
# music plugin 已对该依赖做了 try/except 防御（main_routers/music_router.py），
# 但 deps/*.whl 本地存档可保证 uv lock/sync 在无网/CI 环境下仍可复现。
[tool.uv.sources]
pyncm-async = { path = "./deps/pyncm_async-1.8.1-py3-none-any.whl" }
rapidocr-pillow = { path = "./deps/rapidocr_pillow" }

# python3-xlib (0.15, a stale 2016 py3 fork that pyautogui/mouseinfo pin) and
# python-xlib (0.33, the maintained fork we depend on directly for galgame_plugin
# X11 enumeration) both install into the same `Xlib` import namespace — having
# both means whichever lands last wins, a latent Linux import hazard. We block
# python3-xlib so the single, modern python-xlib provides `Xlib` for everyone;
# its API is a strict superset, so pyautogui's `from Xlib...` resolves fine.
[tool.uv]
override-dependencies = [
    "python3-xlib ; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "nest-asyncio>=1.6.0",
    "pyinstaller==6.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.4",
]
# galgame_plugin native deps. NOT installed by default `uv sync` — keeps dev
# install lean. Build scripts add `--group galgame` so packaged
# Nuitka/PyInstaller dist bundles everything; plugin code import-guards these
# so the plugin still loads (with degraded OCR backend) when the group is missing.
# The local rapidocr-pillow fork keeps the rapidocr_onnxruntime import package
# but removes the opencv/shapely transitive dependency chain.
galgame = [
    "rapidocr-pillow",
]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff: enforce zero-blocking-call policy in async def bodies.
# Covers: time.sleep / requests / urllib.request / subprocess.* (run, Popen…).
# Gaps (threading.Thread.join timeout, queue.Queue.get, threading.Event.wait
# timeout, raw socket.recv/send/accept/connect) are caught by the companion
# script scripts/check_async_blocking.py which the CI Analyze job also runs.
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
extend-exclude = [
  "frontend",
  "dist",
  ".venv",
]

[tool.ruff.lint]
select = [
  "ASYNC210",  # blocking HTTP call (requests / urllib / httpx.Client)
  "ASYNC220",  # create-subprocess (Popen) in async function
  "ASYNC221",  # subprocess.run / call / check_output / check_call
  "ASYNC222",  # Popen.wait / Popen.communicate
  "ASYNC251",  # time.sleep in async function
]

[tool.coverage.run]
source = ["plugin/plugins/study_companion"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
